--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,1 +1,303 @@
-
+ .section1 .txt-rotate {
+     margin-top: -0.2em;
+     font-size: 3em;
+ }
+ 
+ .section1 #title {
+     font-size: 5em;
+ }
+ 
+ .section1 div {
+     font-family: 'Open Sans';
+     position: relative;
+     top: 35%;
+     left: 20%;
+ }
+ 
+ #aboutMe {
+     position: relative;
+     padding-left: 1%;
+     width: 100%;
+     height: 100%;
+     overflow: hidden;
+ }
+ 
+ #aboutMe {
+     display: flex;
+     justify-content: left;
+     flex-direction: row;
+ }
+ 
+ #aboutMe li {
+     overflow: hidden;
+     padding-left: 1%;
+ }
+ 
+ #aboutMe li:first-child {
+     width: 70%;
+     height: 50%;
+     top: 20%;
+ }
+ 
+ #aboutMe li:nth-child(2n) {
+     width: 30%;
+ }
+ 
+ #aboutMe h1 {
+     color: #888;
+     font-size: 2em;
+ }
+ 
+ #aboutMe span {
+     color: #FFF;
+     font-family: 'Raleway';
+     font-size: 1.5em;
+     margin: 1em 0;
+     line-height: 1.5em;
+     font-weight: 200px;
+ }
+ 
+ .section2 img {
+     position: absolute;
+     left: 0;
+     width: auto;
+     height: 100%;
+ }
+ 
+ .section {
+     position: relative;
+ }
+ 
+ .section1 {
+     /* background: #fff; */
+     display: block;
+     padding: 0;
+     background-size: cover;
+     background-repeat: no-repeat;
+     color: #ffffff;
+     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+     background-image: url('https://images.unsplash.com/photo-1494253109108-2e30c049369b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80')
+ }
+ 
+ .section2 {
+     background-color: #fff;
+     padding: 0;
+     display: block;
+ }
+ 
+ .section2 h1 {
+     color: #888;
+     font-size: 1.5em;
+ }
+ 
+ .section2 li {
+     color: #fff
+ }
+ 
+ .section3 {
+     background-color: #A199E2;
+     padding: 0;
+     display: block;
+     position: relative;
+ }
+ 
+ .section4 {
+     display: block;
+     background-color: #CC938E;
+     padding: 1em 2em;
+ }
+ 
+ .alert {
+     text-align: center;
+     padding: 10px;
+     background: #79c879;
+     color: #fff;
+     padding-bottom: 10px;
+     display: none;
+ }
+ 
+ .main img {
+     width: 30%;
+     height: 30%;
+ }
+ /* circle CSS */
+ 
+ #Infographic {
+     top: 10%;
+     left: 40%;
+     position: relative;
+     font-family: Arial, Helvetica, sans-serif;
+     font-weight: bold;
+ }
+ 
+ #Infographic span {
+     display: none;
+ }
+ 
+ .circle {
+     border-radius: 50%;
+     width: 25em;
+     height: 15em;
+     text-align: center;
+     vertical-align: center;
+     position: absolute;
+ }
+ 
+ .circle p {}
+ 
+ #c1 {
+     top: 0;
+     left: 0;
+     background-color: rgba(102, 99, 98, .70);
+ }
+ 
+ #c1 p {
+     padding-top: 2em;
+ }
+ 
+ #c2 {
+     top: 0;
+     left: 16em;
+     background-color: rgba(102, 99, 98, .60);
+ }
+ 
+ #c2 p {
+     padding-left: 1em;
+     padding-top: 2em;
+ }
+ 
+ #c3 {
+     top: 7em;
+     left: 9em;
+     background-color: rgba(102, 99, 98, .50);
+ }
+ 
+ #c3 p {
+     padding-top: 9em;
+ }
+ 
+ .joined {
+     position: absolute;
+     display: table-cell;
+     vertical-align: middle;
+     text-align: center;
+ }
+ 
+ #all {
+     top: 7em;
+     left: 16em;
+     width: 10em;
+     height: 5em;
+     padding-top: 1.5em;
+ }
+ /* project */
+ 
+ .section3 h1 {
+     text-align: center;
+ }
+ 
+ .section3 .container {
+     display: flex;
+ }
+ 
+ .section3 .container .card {
+     flex: 1;
+     margin: 10px;
+     text-align: center;
+     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+     border-radius: 20px;
+     overflow: hidden;
+ }
+ 
+ .section3 .container .card .title {
+     text-transform: uppercase;
+     font-size: 25px;
+     font-weight: bold;
+     padding: 15px;
+     padding-bottom: 60px;
+     color: #ffffff;
+ }
+ 
+ .section3 .container .card .circle {
+     box-sizing: border-box;
+     font-size: 35px;
+     font-weight: bold;
+     background-color: #000000;
+     width: 100px;
+     height: 100px;
+     border-radius: 50%;
+     color: #ffffff;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     margin: -60px auto 0px auto;
+     z-index: 2;
+     position: relative;
+     box-shadow: inset 0px -10px 8px -8px rgba(0, 0, 0, 0.5);
+ }
+ 
+ .section3 .container .card .content {
+     padding: 15px;
+     padding-top: 45px;
+     margin-top: -45px;
+     background-color: #ffffff;
+     box-shadow: 0px -4px 5px rgba(0, 0, 0, 0.15);
+ }
+ 
+ .section3 .container .card .icon {
+     font-size: 50px;
+ }
+ 
+ .section3 .container .card:nth-child(1) .title,
+ .section3 .container .card:nth-child(1) .circle {
+     background-color: #e34f26;
+ }
+ 
+ .container .card:nth-child(1) .icon {
+     color: #e34f26;
+ }
+ 
+ .container .card:nth-child(2) .title,
+ .container .card:nth-child(2) .circle {
+     background-color: #1b73ba;
+ }
+ 
+ .container .card:nth-child(2) .icon {
+     color: #1b73ba;
+ }
+ 
+ .container .card:nth-child(3) .title,
+ .container .card:nth-child(3) .circle {
+     background-color: #f8d23c;
+ }
+ 
+ .container .card:nth-child(3) .icon {
+     color: #f8d23c;
+ }
+ 
+ .container .card:nth-child(4) .title,
+ .container .card:nth-child(4) .circle {
+     background-color: #7478ae;
+ }
+ 
+ .container .card:nth-child(4) .icon {
+     color: #7478ae;
+ }
+ 
+ .container .card:nth-child(5) .title,
+ .container .card:nth-child(5) .circle {
+     background-color: #de8a00;
+ }
+ 
+ .container .card:nth-child(5) .icon {
+     color: #de8a00;
+ }
+ 
+ @media (max-width: 767px) {
+     .container {
+         flex-wrap: wrap;
+     }
+     .container .card {
+         flex: 0 0 100%;
+     }
+ }
